# primaschema

./: .gitignore  MANIFEST.in  README.md  index.yml  pyproject.toml
.github/workflows/: test.yml
schema/: manifest-header.yml  manifest_schema.json  primer-scheme_schema.yml  primer_scheme.py
schemas/: manifest_schema.json  scheme_schema.json
src/primaschema/: __init__.py  cli.py  lib.py  models.py  util.py
src/primaschema/data/: manifest_schema.json  manifest_schema.latest.json  scheme_schema.json  scheme_schema.latest.json
src/primaschema/schema/: bed.py  info.py  info.yml
test/: conftest.py  test_all.py
test/data/broken/different-case/: eden-v1-modified.primer.bed
test/data/broken/duplicated-primers/: primer.bed
test/data/broken/end-before-start/: info.yml  primer.bed
test/data/broken/info-yml/extra-field/: info.yml  primer.bed
test/data/broken/info-yml/missing-field/: info.yml
test/data/broken/non-tiling/: primer.bed
test/data/broken/primer-bounds/: primer.bed
test/data/built/artic-v4.1/: info.yaml
test/data/built/artic/v4.1/: info.yaml
test/data/built/eden-v1/: info.yaml
test/data/different-case/: eden.modified.primer.bed
test/data/many-ref-chroms/: primer.bed  reference.fasta  scheme.bed
test/data/primer-schemes/artic/v4.1/: info.yaml  info.yml
test/data/primer-schemes/eden/v1/: info.yaml  info.yml
test/data/primer-schemes/midnight/v1/: info.yml
test/data/primer-schemes/midnight/v2/: info.yml
test/data/primer-schemes/schema/: primer-scheme-schema.yml
test/data/primer-schemes/schemes/sars-cov-2/artic/v4.1/: info.yml
test/data/primer-schemes/schemes/sars-cov-2/eden/v1/: info.yml  primer.bed
test/data/primer-schemes/schemes/sars-cov-2/midnight/v1/: info.yml
test/data/primer-schemes/schemes/sars-cov-2/midnight/v2/: info.yml  primer.bed
test/data/unordered/: info.yml  primer.bed
tests/: test_all.py
tests/data/broken/five-columns/: primer.bed
tests/data/primer-schemes/artic/v4.1/: info.yaml
tests/data/primer-schemes/eden/v1/: info.yaml
utils/: README.md  summarise_repo.py
(+5 files in other folders)
