[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "primaschema"
authors = [
    {name = "Bede Constantinides", email="bedeabc@gmail.com"},
    {name = "Peter van Heusden", email="pvh@sanbi.ac.za"}
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["genomics"]
license = {text = "MIT License"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "altair>=5.3.0",
    "biopython>=1.80",
    "defopt==6.4.0",
    "jsonschema",
    "linkml",
    "natsort>=8.4.0",
    "pandas>=1.5.3",
    "pyyaml",
    "vl-convert-python>=1.4.0"
]

[project.scripts]
primaschema = "primaschema.cli:main"

[project.urls]
Home = "https://github.com/pha4ge/primaschema"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "flit"
]
